--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "esportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Achraftraf.github.io/Achraftraf.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@next/font": "^13.4.4",
@@ -25,6 +28,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
