--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^13.4.4",
     "framer-motion": "^10.12.16",
     "next": "13.4.3",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
@@ -28,10 +29,8 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    
     "gh-pages": "^6.0.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
-  
 }
