--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tailwind-scrollbar": "^3.0.4",
     "three": "^0.164.1",
     "together-ai": "^0.11.1",
-    "tsparticles": "^2.9.3"
+    "tsparticles": "^2.9.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
