--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@next/font": "^13.4.4",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@react-spring/web": "^9.7.3",
+    "@react-spring/three": "^9.7.3",
     "axios": "^1.7.9",
     "framer-motion": "^10.12.16",
     "next": "^13.4.3",
@@ -23,7 +25,6 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-spring": "^9.7.3",
     "react-tsparticles": "^2.9.3",
     "swiper": "^9.4.0",
     "tailwind-scrollbar": "^3.0.4",
