--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@next/font": "^13.4.4",
+    "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
-    "@react-spring/web": "^9.7.3",
-    "@react-spring/three": "^9.7.3",
     "axios": "^1.7.9",
     "framer-motion": "^10.12.16",
+    "groq-sdk": "^0.37.0",
     "next": "^13.4.3",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
