feat: Introduce new homepage with dynamic theme switching, particle effects, and related components, alongside updated particle dependencies.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "axios": "^1.7.9",
     "framer-motion": "^10.12.16",
     "groq-sdk": "^0.37.0",
@@ -28,12 +30,13 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-tsparticles": "^2.9.3",
+    "react-tsparticles": "^2.12.2",
     "swiper": "^9.4.0",
     "tailwind-scrollbar": "^3.0.4",
     "three": "^0.164.1",
     "together-ai": "^0.11.1",
-    "tsparticles": "^2.9.3",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
